--- a/pages/index.html
+++ b/pages/index.html
@@ -92,6 +92,7 @@ menuBar5.init();
 	<div id="tool">
 		<input title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
 		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"/><br/>
+		<input title="Sposta la visualizzazione" class="toolbarButton" id="moveViewButton" type="button"/><br/>
 		<input title="Disegna una linea diritta" class="toolbarButton" id="straightLineButton" type="button"/><br/>
 		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierCurveButton" type="button"/><br/>
 		<input title="Crea rettangoli e quadrati" class="toolbarButton" id="squareButton" type="button"/><br/>
