canvas.js: BoundingRectangleSetter

--- a/pages/index.html
+++ b/pages/index.html
@@ -225,15 +225,16 @@ menuBar5.init();
 <!-- Parte Dialog Properties -->
 <div id="propertiesDialog" class="flora" title="Modifica attributi">
 	<p id="prova">H:  
-		<INPUT id="DialogHeight" type="text" size="2" value=" " />px
+		<INPUT id="DialogHeight" type="text" size="2" value="" />px
 	</p>
 	<p>L:   
-		<INPUT id="DialogWidth" type="text" size="2" value=" " />px
+		<INPUT id="DialogWidth" type="text" size="2" value="" />px
 	</p>
 	<p>X:  &nbsp; 
 		<INPUT id="x" type="text" size="2" value=" " />&nbsp;&nbsp;   Y:&nbsp;
 		<INPUT id="y" type="text" size="2"/>
 	</p>
+        <input id="submitRect" type="button" value="ok" />
 	<p id="edgeSetterZone" style="display:none">N.di lati: 
 		<input id="edgeNumber" type="text" maxlength="4" size="6" value="3"/>
 	<!--  	<span>
