canvas.js: EdgeNumberSetter

--- a/pages/index.html
+++ b/pages/index.html
@@ -257,14 +257,14 @@ menuBar5.init();
 		<INPUT id="x" type="text" size="2" value=" " />&nbsp;&nbsp;   Y:&nbsp;
 		<INPUT id="y" type="text" size="2"/>
 	</p>
-        <input id="submitRect" type="button" value="ok" />
+        <input id="submitRect" type="button" value="Change" />
 	<p id="edgeSetterZone" style="display:none">N.di lati: 
 		<input id="edgeNumber" type="text" maxlength="4" size="6" value="3"/>
 	<!--  	<span>
 			<input type="button" id="edgeSetter" value="ok"/>
 		</span> -->
+        <input id="submitEdge" type="button" value="Change" />
 	</p>
-	
 	<p id="fontSetterZone" style="display:none">Testo: 
 	<input id="textString" type="text" value="canvas"/>		
 		<select id="fontSizeButton">
