canvas.js: supporto minimo settaggio colore

--- a/pages/index.html
+++ b/pages/index.html
@@ -226,6 +226,7 @@ menuBar5.init();
   			<input type="text" id="color1" name="color1" value="#123456" />
   		</div>
   		<div id="picker1"></div>
+                <input type="button" id="setBorderCol" value="Ok" />
 	</form>	
 	<!-- Seconda ruota -->
 	<p>Riempimento:  
@@ -240,7 +241,8 @@ menuBar5.init();
   			<input type="text" id="color2" name="color2" value="#123456" />
   		</div>
   		<div id="picker2"></div>
-	</form>	
+                <input type="button" id="setFillCol" value="Ok" />
+        </form>	
 </div>
 
 
