risolto bug subdolo

--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@
 <script type="text/javascript" src="../src/lib/menu-for-applications.js"></script>
 <!-- Script di prova di disegno su canvas -->
 </head>
-<body onload="setup()">
+<body>
 
 <!-- Interfaccia -->
 <div>
@@ -256,7 +256,7 @@ menuBar5.init();
 		<INPUT id="DialogWidth" type="text" size="2" value="" />px
 	</p>
 	<p>X:  &nbsp; 
-		<INPUT id="x" type="text" size="2" value=" " />&nbsp;&nbsp;   Y:&nbsp;
+		<INPUT id="x" type="text" size="2" value="" />&nbsp;&nbsp;   Y:&nbsp;
 		<INPUT id="y" type="text" size="2"/>
 	</p>
         <input id="submitRect" type="button" value="Change" />
