--- a/src/test/allTests.html
+++ b/src/test/allTests.html
@@ -14,11 +14,13 @@
   <script src="../canvas.js"></script>
   <script src="figuresTest.js"></script>
   <script src="saveTest.js"></script>
+  <script src="loadTest.js"></script>
   <script src="guiTest.js"></script>
   <script>
 $(document).ready(function () {
 runFiguresTest();
 runSaveTest();
+runLoadTest();
 runGuiTest();
 });
   </script>
