Risolto bug opera

--- a/pages/index.html
+++ b/pages/index.html
@@ -259,13 +259,13 @@ menuBar5.init();
 		<INPUT id="x" type="text" size="2" value="" />&nbsp;&nbsp;   Y:&nbsp;
 		<INPUT id="y" type="text" size="2"/>
 	</p>
-        <input id="submitRect" type="button" value="Change" />
+        <input id="submitRect" type="button" value="Cambia" />
 	<p id="edgeSetterZone" style="display:none">N.di lati: 
 		<input id="edgeNumber" type="text" maxlength="4" size="6" value="3"/>
 	<!--  	<span>
 			<input type="button" id="edgeSetter" value="ok"/>
 		</span> -->
-        <input id="submitEdge" type="button" value="Change" />
+        <input id="submitEdge" type="button" value="Cambia" />
 	</p>
 	<p id="fontSetterZone" style="display:none">Testo: 
 	<input id="textString" type="text" value="canvas"/>		
@@ -303,10 +303,10 @@ menuBar5.init();
 			<input id="loadButton" type="button" value="Carica"/>	
 		</span>		
 	</p>
+	<!-- A proposito -->
 	<p id="aboutDialog" style="display:none" class="flora" title="About:">
 		<span>
-			<h1 style:"text-align:center">AJAXDRAW</h1><br/>
-			
+			<h1 style="text-align:center" >AJAXDRAW</h1><br/>			
 			<img src="../doc/logo/logo.png" width="269" height="135" name="Logo" alt="Logo WebShape" />
 		</span>		
 	</p>
