load: doc come stringa, e primo test (non funzionante)

--- a/src/test/allTests.html
+++ b/src/test/allTests.html
@@ -11,6 +11,7 @@
   <script src="../utils.js"></script>
   <script src="../figures.js"></script>
   <script src="../save.js"></script>
+  <script src="../load.js"></script>
   <script src="../canvas.js"></script>
   <script src="figuresTest.js"></script>
   <script src="saveTest.js"></script>
