--- a/pages/index.html
+++ b/pages/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>AJAXDRAW</title>
-<!--[if IE]><script type="text/javascript" src="../src/lib/excanvas.js"></script><![endif]-->
+
 <link rel="stylesheet" title="mozilla" type="text/css" href="../styles/style.css"/>
 <link rel="alternate stylesheet" title="opera" type="text/css" href="../styles/opera.css"/>
 <link rel="alternate stylesheet" title="safari" type="text/css" href="../styles/safari.css"/>
@@ -15,6 +15,7 @@
 <link rel="stylesheet" type="text/css" href="../styles/menu_bar/menu-bar.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/menu_bar/menu-item.css"/>
 <script type="text/javascript" src="../src/lib/jquery.js"></script>
+<!--[if IE]><script type="text/javascript" src="../src/lib/excanvas.js"></script><![endif]-->
 <script type="text/javascript" src="../src/lib/farbtastic.js"></script>
 <script type="text/javascript" src="../src/lib/jquery.dimensions.js"></script>
 <script type="text/javascript" src="../src/lib/jquery.tooltip.js"></script>
@@ -81,13 +82,13 @@
     								width: 230,
 									resizable: false,
     								dialogClass: "Dialog1"
-								   });' id="500014"><a href="#">ColDial</a>	
+								   });' id="500014"><a href="#">Colori</a>	
 			<li jsFunction='$("#propertiesDialog").dialog( "close" );
 								 $("#propertiesDialog").dialog({
     								position: "right",
     								width: 230,
 									height: 280
-  									  });' id="500015"><a href="#">PropDial</a>	
+  									  });' id="500015"><a href="#">Proprieta'</a>	
 		</ul>
 	</li>
 	<!--  <li id="50003" itemType="separator"></li> -->
