corretto allTests.html

--- a/src/test/allTests.html
+++ b/src/test/allTests.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="http://dev.jquery.com/view/trunk/qunit/testsuite.css" type="text/css" media="screen" />
 
 <!--[if IE]><script type="text/javascript" src="../lib/excanvas.js"></script><![endif]-->
+  <script src="../lib/farbtastic.js"></script>
   <script src="../lib/canvastext.js"></script>
   <script src="../utils.js"></script>
   <script src="../figures.js"></script>
@@ -27,7 +28,7 @@ runGuiTest();
   </script>
 </head>
 <body>
-  
+ 
 <script type="text/javascript" src="http://jqueryjs.googlecode.com/svn/trunk/qunit/testrunner.js"></script>
  <h2 id="banner"></h2>
  <h2 id="userAgent"></h2>
@@ -36,5 +37,13 @@ runGuiTest();
 
  <div id="main"></div>
  <canvas style="display:none"id="cv" height="480" width="760"></canvas>
+ <div style="display:none" id="x"></div>
+ <div style="display:none" id="y"></div>
+ <div style="display:none" id="DialogHeight"></div>
+ <div style="display:none" id="DialogWidth"></div>
+ <div style="display:none" id="color1"></div>
+ <div style="display:none" id="color2"></div>
+ <div id="edgeNumber" style="display: none"></div> 
+
 </body>
 </html>
