Cancellazione elemento singolo selezionato tramite pulsante apposito o tasto 'canc'

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="../src/figures.js"></script>
 <script type="text/javascript" src="../src/gui.js"></script>
 <script type="text/javascript" src="../src/canvas.js"></script>
+<script type="text/javascript" src="../src/save.js"></script>
 <script type="text/javascript" src="../src/lib/menu-for-applications.js"></script>
 <!-- Script di prova di disegno su canvas -->
 </head>
@@ -145,15 +146,10 @@ menuBar5.init();
 		</span><br/>
 		<span>
 			<input type="button" id="clearCanvasButton" name="ClearButton" value="Svuota Canvas"/>
-		</span>
-	<!--	<span class="tooltip">
-			<span>Salva l'immagine in un file SVG</span>
-			<input type="button" name="SaveSVG" value="Salva SVG"/>&nbsp;
-			<br/>
-		</span>Carica:
+		</span><br/>
 		<span>
-			<input type="file" class="SVG" name="LoadSVG" value="Carica SVG"/>
-		</span>   -->
+			<input type="button" id="eraseButton" name="EraseButton" value="Cancella elemento"/>
+		</span>
 	</div>
 	<br/>
 	
