--- a/pages/index.html
+++ b/pages/index.html
@@ -27,6 +27,7 @@
 <script type="text/javascript" src="../src/lib/ui.resizable.js"></script>
 <script type="text/javascript" src="../src/lib/ui.draggable.js"></script>
 <script type="text/javascript" src="../src/lib/canvastext.js"></script>
+<script type="text/javascript" src="../src/lib/jquery.rightClick.js"></script>
 <script type="text/javascript" src="../src/utils.js"></script>
 <script type="text/javascript" src="../src/figures.js"></script>
 <script type="text/javascript" src="../src/gui.js"></script>
@@ -138,7 +139,7 @@ menuBar5.init();
 	<!--  Zona di salvataggio provvisoria -->
 	<div id="saveLoadZone">
 		<span >Zoom:
-			<select id="scaleButton">
+			<select id="scaleButton" title="Scegli la percentuale di riscalamento">
 				<option value="2" >200%</option>
  			 	<option value="1.5" >150%</option> 						
  				<option value="1" >100%</option>
