--- a/pages/index.html
+++ b/pages/index.html
@@ -118,7 +118,8 @@ menuBar5.init();
 <!-- Toolbar a pulsanti -->
 	<div id="tool">
 		<input title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
-		<input title="Ingrandisce o rimpicciolisce" class="toolbarButton" id="zoomButton" type="button"/><br/>
+		<input title="Ingrandisce la visualizzazione" class="toolbarButton" id="zoomButton" type="button"/><br/>
+		<input title="Diminuisce la visualizzazione" class="toolbarButton" id="zoomButton" type="button"/><br/>
 		<input title="Sposta la visualizzazione" class="toolbarButton" id="moveViewButton" type="button"/><br/>
 		<input title="Disegna una linea diritta" class="toolbarButton" id="straightLineButton" type="button"/><br/>
 		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierCurveButton" type="button"/><br/>
@@ -127,7 +128,7 @@ menuBar5.init();
 		<input title="Crea poligoni" class="toolbarButton" id="polygonButton" type="button"/><br/>
 		<input title="Disegna linee a mano libera" class="toolbarButton" id="freeLineButton" type="button"/><br/>
 		<input title="Crea oggetti testuali" class="toolbarButton" id="textButton" type="button"/><br/>
-		<div id="saveLoadZone"><br/>
+		<div id="saveLoadZone"><br/>	
 		<span >
 			<select id="scaleButton" title="Scegli la percentuale di riscalamento">
 				<option value="2" >200%</option>
