implementazione Bezier a 4 click ma salvataggio funziona male

--- a/src/test/draw.html
+++ b/src/test/draw.html
@@ -131,13 +131,13 @@ c.extend(new Point(800, 700));
 figures.push(c);
 
 // Text
-c = new Text('Aloha!');
+c = new Text(new TextString('Aloha!'));
 c.getBorderColour().set(255, 0, 0, new Opacity(1));
 c.getBounds().setStart(new Point(0, 700));
 c.getBounds().setEnd(new Point(200, 850));
 figures.push(c);
 // Text with reversed bounding rectangle
-c = new Text('Aloha (2) !');
+c = new Text(new TextString('Aloha (2) !'));
 c.setSelection(true);
 c.getBorderColour().set(255, 0, 0, new Opacity(1));
 c.getBounds().setStart(new Point(450, 850));
