predisposti zoom in/out, manca implementazione, e bezier funzionante in pieno

--- a/pages/index.html
+++ b/pages/index.html
@@ -118,8 +118,8 @@ menuBar5.init();
 <!-- Toolbar a pulsanti -->
 	<div id="tool">
 		<input title="Seleziona e trasforma oggetti" class="toolbarButton" id="selectionButton" type="button"/><br/>
-		<input title="Ingrandisce la visualizzazione" class="toolbarButton" id="zoomButton" type="button"/><br/>
-		<input title="Diminuisce la visualizzazione" class="toolbarButton" id="zoomButton" type="button"/><br/>
+		<input title="Ingrandisce la visualizzazione" class="toolbarButton" id="zoomInButton" type="button"/><br/>
+		<input title="Diminuisce la visualizzazione" class="toolbarButton" id="zoomOutButton" type="button"/><br/>
 		<input title="Sposta la visualizzazione" class="toolbarButton" id="moveViewButton" type="button"/><br/>
 		<input title="Disegna una linea diritta" class="toolbarButton" id="straightLineButton" type="button"/><br/>
 		<input title="Disegna una linea di Bezier" class="toolbarButton" id="bezierCurveButton" type="button"/><br/>
