Clonazione funzionante, zoom quasi

--- a/pages/index.html
+++ b/pages/index.html
@@ -133,19 +133,22 @@ menuBar5.init();
 		<input title="Crea caselle di testo" class="toolbarButton" id="textButton" type="button"/><br/>
 		<div id="saveLoadZone"><br/>	
 		<span >
-			<select id="scaleButton" title="Scegli la percentuale di riscalamento">
+		<!--  <select id="scaleButton" title="Scegli la percentuale di riscalamento">
 				<option value="2" >200%</option>
  			 	<option value="1.5" >150%</option> 						
  				<option value="1" >100%</option>
  			 	<option value="0.5" >50%</option>  
  			 	<option value="0.25" >25%</option> 
-			</select>
+			</select> -->	
 		</span><br/>
 		<span>
 			<input type="button" id="clearCanvasButton" name="ClearButton" value="Svuota" title="Svuota il canvas"/>
 		</span><br/>
 		<span>
 			<input type="button" id="eraseButton" name="EraseButton" value="Cancella" title="Cancella un singolo elemento"/>
+		</span><br/>
+		<span>
+			<input type="button" id="cloneButton" name="CloneButton" value="Clona" title="Clona un singolo elemento"/>
 		</span>
 		</div>
 	</div>
