iniziato resoconto PQ, modifiche e nuovi test

--- a/src/test/allTests.html
+++ b/src/test/allTests.html
@@ -44,6 +44,7 @@ runGuiTest();
  <div style="display:none" id="color1"></div>
  <div style="display:none" id="color2"></div>
  <div id="edgeNumber" style="display: none"></div> 
+ <div id="fontTypeButton" style="display: none"></div> 
 
 </body>
 </html>
